# pgeon

./: .ccls  .clang-format  .editorconfig  .env  .env.local  .gitignore  .vimspector.json  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  build-environment.yml  cleanup.sh  environment.yml  pg_types.csv  pyproject.toml  setup.cfg  setup.py
 tests/: create_test_data.py
.devcontainer/: .env  devcontainer.json  docker-compose.yml  docker.env
.github/workflows/: build.yml
benchmarks/: create_tables.sh  minute_bars.csv  minute_bars.sql  run.py  t.py  t2.py
benchmarks/sql/: composite.sql  enum.sql  json.sql
ci/: setup-db.sh
ci/linux/: prepare-build.sh  repair-wheel.py  repair-wheel.sh
ci/macos/: prepare-build.sh  repair-wheel.py
ci/windows/: repair-wheel.py  repair-wheel.sh
cmake/: FindArrowPython.cmake
include/: pgeon.h
python/: Makefile  __init__.py  _pgeon.pyx  c_pgeon.pxd  pgeon.cpp  pgeon.py  pgeon.pyx  setup.cfg  setup.py
scripts/: prepare-build.sh
scripts/linux/: prepare-build.sh  repair-wheel.sh
scripts/macos/: prepare-build.sh  repair-wheel.sh
src/: CMakeLists.txt  api.cc  builder.cc  builder.h  cli.cc  decoders.cc  decoders.h  decoders.hpp  endianness.h  hton.h  main.cc  new.cc  pg_interface.cc  pg_interface.h  schema.cc  sql.cc  sql.h  table_builder.cc  table_builder.h
src/builder/: base.h  common.h  datetime.cc  datetime.h  geometric.cc  geometric.h  misc.cc  misc.h  nested.cc  nested.h  network.cc  network.h  numeric.cc  numeric.h  stringlike.cc  stringlike.h  text_search.cc  text_search.h
src/c++/: CMakeLists.txt  api.cc  builder.cc  builder.h  pg_interface.h
src/c++/builder/: base.h  datetime.cc  geometric.cc  geometric.h  misc.cc  nested.cc  network.cc  numeric.cc  stringlike.cc  stringlike.h  text_search.cc  text_search.h  unix.h  win.h
src/cpp/: CMakeLists.txt  pg_interface.cc  pg_interface.h  table_builder.cc
src/cpp/builder/: base.h  common.h  misc.cc  network.cc  numeric.cc  stringlike.cc
src/cpp/include/: pgeon.h
src/pgeon/: api.cc  builder.cc  builder.h  pg_interface.cc  pg_interface.h  sql_interface.cc  sql_interface.h  table_builder.cc  table_builder.h
src/pgeon-cli/: main.cc
src/pgeon/builder/: base.h  common.h  datetime.cc  datetime.h  geometric.cc  geometric.h  misc.cc  misc.h  nested.cc  nested.h  network.cc  network.h  numeric.cc  numeric.h  stringlike.cc  stringlike.h  text_search.cc  text_search.h
src/pgeon/util/: endianness.h  streambuffer.h
src/python/: CMakeLists.txt  __init__.py  pgeon.cc
src/util/: hton.h  streambuffer.h
tests/: _todo.py  conftest.py  create_tables.sh  create_test_data.py  t.py  test_basic.py  test_exceptions.py  test_options.py  test_query.py
tests/sql/: array.sql  composite.sql  enum.sql  json.sql  numbers.sql
