[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "cython",
  "pyarrow"
]
build-backend = "setuptools.build_meta"

[project]
name = "pgeon"
description = "Apache Arrow PostgreSQL connector"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["arrow", "postgresql"]
license = { text = "MIT License" }
classifiers = [
  "Framework :: Apache Arrow",
  "Framework :: PostgreSQL",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
]
dynamic = ["version"]
dependencies = ["pyarrow"]

[project.urls]
"Homepage" = "https://github.com/0x0L/pgeon"
"Bug Tracker" = "https://github.com/0x0L/pgeon/issues"

[project.optional-dependencies]
tests = ["pytest"]
benchmarks = ["asyncpg", "psycopg[binary]", "pandas", "seaborn"]

[tool.setuptools_scm]
