[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "cython",
  "pyarrow"
]
build-backend = "setuptools.build_meta"

[project]
name = "pgeon"
description = "Apache Arrow PostgreSQL connector"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["arrow", "postgresql"]
license = { text = "MIT License" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
]
dynamic = ["version"]
dependencies = ["pyarrow"]

[project.urls]
"Homepage" = "https://github.com/0x0L/pgeon"
"Bug Tracker" = "https://github.com/0x0L/pgeon/issues"

[project.optional-dependencies]
tests = ["pytest"]
benchmarks = ["asyncpg", "psycopg[binary]", "pandas", "seaborn"]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-*"
skip = "*_i686 *-musllinux_*"
build-verbosity = 2
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
before-build = "bash ci/macos/prepare-build.sh"
repair-wheel-command = "cp {wheel} {dest_dir}"

[tool.cibuildwheel.linux]
before-build = "bash ci/linux/prepare-build.sh"
repair-wheel-command = "/opt/_internal/pipx/venvs/auditwheel/bin/python ci/linux/repair-wheel.py {wheel} {dest_dir}"
