[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "cython", "pyarrow"]
build-backend = "setuptools.build_meta"

[project]
name = "pgeon"
description = "Apache Arrow PostgreSQL connector"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["arrow", "postgresql"]
license = { text = "MIT License" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Database",
]
dynamic = ["version"]
dependencies = ["pyarrow"]

[project.urls]
"Homepage" = "https://github.com/0x0L/pgeon"
"Bug Tracker" = "https://github.com/0x0L/pgeon/issues"

[project.optional-dependencies]
tests = ["pytest"]
benchmarks = ["asyncpg", "psycopg[binary]", "pandas", "seaborn"]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-*"
skip = ["*_i686", "*-musllinux_*", "*-win32", "pp*"]
build-verbosity = 2
before-all = "bash ci/setup-db.sh"
environment = { PGEON_TEST_DB = 'postgresql://postgres@localhost/postgres' }
test-command = "pytest {project}/tests"
test-extras = ["tests"]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = '10.14' }
repair-wheel-command = "python ci/macos/repair-wheel.py {wheel} {dest_dir} {delocate_archs}"

[tool.cibuildwheel.linux]
environment-pass = ["RUNNER_OS"]
repair-wheel-command = "/opt/_internal/pipx/venvs/auditwheel/bin/python ci/linux/repair-wheel.py {wheel} {dest_dir}"

[tool.cibuildwheel.windows]
repair-wheel-command = "bash ci/windows/repair-wheel.sh {wheel} {dest_dir}"
